Enable method security and update JWT auth